--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "babel-node build/devServer.js"
+    "dev": "babel-node build/devServer.js",
+    "webpack": "webpack-dev-server --inline --progress --config build-webpack/webpack.dev.conf.js"
   },
   "repository": {
     "type": "git",
@@ -16,28 +17,47 @@
   },
   "homepage": "https://github.com/forceablaze/myvuejs#readme",
   "devDependencies": {
+    "autoprefixer": "^9.4.10",
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.5",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^2.1.0",
     "eslint": "^5.14.1",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-vue": "^5.2.2",
     "express": "^4.16.4",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-webpack-plugin": "^2.30.1",
+    "node-notifier": "^5.4.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-url": "^8.0.0",
     "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.29.5",
-    "webpack-dev-server": "^3.2.0",
+    "vue-loader": "^13.3.0",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.8",
+    "webpack": "^3.6.0",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^2.9.1",
     "webpack-hot-middleware": "^2.24.3",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "vue": "^2.6.7",
-    "vue-router": "^3.0.2"
+    "vue": "^2.6.8",
+    "vue-router": "^3.0.2",
+    "vuetify": "^1.5.4"
   }
 }
