--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "babel-node build/devServer.js",
+    "dev": "babel-node build-webpack/devServer.js",
+    "test": "babel-node build-webpack/test.js",
     "webpack": "webpack-dev-server --inline --progress --config build-webpack/webpack.dev.conf.js"
   },
   "repository": {
@@ -26,6 +27,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^2.1.0",
