--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.6.8",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.2",
     "vuetify": "^1.5.4"
   }
