--- a/package.json
+++ b/package.json
@@ -60,9 +60,11 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "path": "^0.12.7",
     "vue": "^2.6.8",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.2",
-    "vuetify": "^1.5.4"
+    "vuetify": "^1.5.4",
+    "vuex": "^3.1.0"
   }
 }
