--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "babel-node build/devServer.js",
     "uwsgi": "uwsgi --chdir woodpecker uwsgi.ini",
-    "webpack": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js"
+    "webpack": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "build": "webpack --config build/webpack.prod.conf.js"
   },
   "repository": {
     "type": "git",
