--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "vue": "^2.6.8",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.2",
+    "vue-virtual-scroller": "^1.0.0-rc.2",
     "vuetify": "^1.5.4",
     "vuex": "^3.1.0"
   }
