--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "path": "^0.12.7",
+    "typescript": "^3.5.3",
     "vue": "^2.6.8",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.2",
